# FIT_CTU_NI

./: README.adoc
NI-AM1/: README.adoc
NI-AM1/homework/: index.adoc
NI-AM1/homework/01/: index.adoc  records.xml
NI-AM1/homework/02/: index.adoc
NI-AM1/homework/03/: index.adoc  pom.xml
NI-AM1/homework/04/: index.adoc  pom.xml
NI-AM1/homework/05/: index.adoc
NI-AM1/notes/: main.tex
NI-AM2/: README.adoc
NI-AM2/homework/: index.adoc
NI-ATHE/: README.adoc
NI-ATHE/codes/: 01_sort.cpp
NI-ATHE/final/: CMakeLists.txt  CServer.cpp  CServer.h  CSocket.cpp  CSocket.h  CSocketClient.cpp  CSocketClient.h  CSocketServer.cpp  CSocketServer.h  CUser.h  client.cpp  common.h  index.adoc  server.cpp  tp.h
NI-ATHE/final/messages/: CMessage.h  CMessageChannel.h  CMessageChannelChange.h  CMessageEnd.h  CMessageUsername.h
NI-CAP/: README.adoc
NI-DDW/: README.adoc
NI-DDW/homework/: index.adoc
NI-EPC/: README.adoc
NI-HCM/: README.adoc
NI-HCM/notes/: main.tex
NI-HCM/semestral/: README.md
NI-KOP/: README.adoc
NI-KOP/notes/: lectures.tex  tutorials.tex
NI-MPI/: README.adoc
NI-MPI/homework/: program.py  report.xlsx
NI-MPI/notes/: main.tex
NI-NUR/: README.adoc
NI-PDB/: README.adoc
NI-PDP/: README.adoc
NI-SWE/: README.adoc
NI-SWE/homework/: index.adoc
NI-VCC/: README.adoc  tutorial_notes.txt
NI-VCC/homework/: hw01.adoc  hw02.adoc  hw03.adoc  hw04.adoc
NI-VMM/: README.adoc
NI-VMM/notes/: main.tex
NI-VMM/semestral/: .gitignore  README.adoc
NI-VSM/: README.adoc
NI-VSM/homework/: hw01.ipynb  hw02.ipynb  hw03.ipynb  hw04.ipynb
(+452 files in other folders)
